--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -296,7 +296,7 @@ DocumentRoot "/usr/local/apache2/htdocs"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex index.html index.php index.php3
 </IfModule>
 
 #
@@ -434,6 +434,8 @@ LogLevel warn
     #
     AddType application/x-compress .Z
     AddType application/x-gzip .gz .tgz
+    AddType application/x-httpd-php .php php3 .html .htm .inc
+    AddType application/x-httpd-php-source .phps
 
     #
     # AddHandler allows you to map certain file extensions to "handlers":
@@ -548,3 +550,10 @@ Include conf/extra/proxy-html.conf
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
+
+<FilesMatch "\.php$">
+    AddHandler php7-script .php
+    AddType application/x-httpd-php .php
+</FilesMatch>
+
+# PHPIniDir "/usr/local/apache2/conf"
