--- a/nginx/proxy-server.conf
+++ b/nginx/proxy-server.conf
@@ -22,8 +22,8 @@ http {
 
     server {
         listen       80;
-        server_name  proxy-server;
-        
+        server_name  localhost;
+
         client_max_body_size 2048M;
 
         location / {
