--- a/nginx/api-server.conf
+++ b/nginx/api-server.conf
@@ -11,7 +11,7 @@ http {
 
     server {
         listen       8181;
-        server_name  api-server;
+        server_name  localhost_api;
 
         root /source;
 
@@ -30,10 +30,10 @@ http {
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass   php7-fpm:9000;
-            fastcgi_index  index.php;
-            fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-            include        fastcgi_params;
+            fastcgi_pass php7-fpm:9000;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            include fastcgi_params;
         }
 
         # deny access to .htaccess files, if Apache's document root
