--- a/php7-fpm/php.ini
+++ b/php7-fpm/php.ini
@@ -1306,7 +1306,7 @@ bcmath.scale = 0
 [Session]
 ; Handler used to store/retrieve data.
 ; http://php.net/session.save-handler
-session.save_handler = memcached
+session.save_handler = files
 
 ; Argument passed to save_handler.  In the case of files, this is the path
 ; where data files are stored. Note: Windows users have to change this
@@ -1335,8 +1335,7 @@ session.save_handler = memcached
 ; where MODE is the octal representation of the mode. Note that this
 ; does not overwrite the process's umask.
 ; http://php.net/session.save-path
-;session.save_path = "/tmp"
-session.save_path = "localhost:11211"
+session.save_path = "/tmp"
 
 ; Whether to use strict session mode.
 ; Strict session mode does not accept an uninitialized session ID, and
@@ -1945,9 +1944,9 @@ ldap.max_links = -1
 ; List of headers files to preload, wildcard patterns allowed.
 ;ffi.preload=
 
-[Memcache]
-extension=php_memcache.dll
-memcache.allow_failover = 1
-memcache.max_failover_attempts = 20
-memcache.chunk_size = 32768
-memcache.default_port = 11211
+; [Memcache]
+; extension=php_memcache.dll
+; memcache.allow_failover = 1
+; memcache.max_failover_attempts = 20
+; memcache.chunk_size = 32768
+; memcache.default_port = 11211
