--- a/nginx/api-server.conf
+++ b/nginx/api-server.conf
@@ -9,6 +9,18 @@ http {
     default_type  application/octet-stream;
     charset UTF-8;
 
+    # Ngnix Security Setting
+    server_tokens off;
+
+    fastcgi_hide_header X-Powered-By;
+    fastcgi_hide_header X-Pingback;
+    fastcgi_hide_header Link;
+    proxy_hide_header X-Powered-By;
+    proxy_hide_header X-Pingback;
+    proxy_hide_header X-Link;
+
+    autoindex off;
+
     server {
         listen       8181;
         server_name  localhost_api;
@@ -17,8 +29,13 @@ http {
 
         # redirect server error pages to the static page /50x.html
         #
-        error_page   500 502 503 504  /50x.html;
+        error_page 500 502 503 504 /50x.html;
         location = /50x.html {
+            root   html;
+        }
+        
+        error_page 400 401 403 404 /40x.html;
+        location = /40x.html {
             root   html;
         }
 
