- Nginx 보안설정  > server_tokens : 웹서버버전 노출 방지  > X-Powered-by : 어떤 언어로 개발되었는지 보여주는 헤더값 방지  > autoindex : 디렉토리 검색기능 비활성화

--- a/nginx/proxy-server.conf
+++ b/nginx/proxy-server.conf
@@ -14,6 +14,20 @@ http {
     default_type  application/octet-stream;
     charset UTF-8;
 
+    # Ngnix Security Setting
+    server_tokens off;
+
+    fastcgi_hide_header X-Powered-By;
+    fastcgi_hide_header X-Pingback;
+    fastcgi_hide_header Link;
+    proxy_hide_header X-Powered-By;
+    proxy_hide_header X-Pingback;
+    proxy_hide_header X-Link;
+
+    autoindex off;
+
+    error_page 400 401 403 404 500 /error.html;
+
     # upstream set
     upstream api-server {
         server api-server:8181;
