- 확장 라이브러리 수정

--- a/php7-fpm/php.ini
+++ b/php7-fpm/php.ini
@@ -924,11 +924,11 @@ extension=mysqli
 ;extension=odbc
 extension=openssl
 ;extension=pdo_firebird
-extension=pdo_mysql
+;extension=pdo_mysql
 ;extension=pdo_oci
 ;extension=pdo_odbc
-extension=pdo_pgsql
-extension=pdo_sqlite
+;extension=pdo_pgsql
+;extension=pdo_sqlite
 ;extension=pgsql
 ;extension=shmop
 
@@ -936,7 +936,7 @@ extension=pdo_sqlite
 ; See http://www.php.net/manual/en/snmp.installation.php
 ;extension=snmp
 
-extension=soap
+;extension=soap
 ;extension=sockets
 ;extension=sodium
 ;extension=sqlite3
