--- a/nginx/proxy-server.conf
+++ b/nginx/proxy-server.conf
@@ -26,11 +26,9 @@ http {
 
     autoindex off;
 
-    error_page 400 401 403 404 500 /error.html;
-
     # upstream set
-    upstream api-server {
-        server api-server:8181;
+    upstream api-service {
+        server api-service:8181;
         keepalive 100;
     }
 
@@ -41,7 +39,7 @@ http {
         client_max_body_size 2048M;
 
         location / {
-            proxy_pass        http://api-server;
+            proxy_pass        http://api-service;
             proxy_redirect    off;
             proxy_set_header  Host $host;
             proxy_set_header  X-Real-IP $remote_addr;
