- 로드밸런싱 테스트용 웹 서버 추가

--- a/nginx/web-service2-bk.conf
+++ b/nginx/web-service2-bk.conf
@@ -22,8 +22,8 @@ http {
     autoindex off;
 
     server {
-        listen       8282;
-        server_name  localhost_web;
+        listen       8084;
+        server_name  vm2.local.com;
 
         root /source;
 
