--- a/nginx/proxy-server.conf
+++ b/nginx/proxy-server.conf
@@ -26,24 +26,57 @@ http {
 
     autoindex off;
 
-    # upstream set
-    upstream api-service {
-        server api-service:8181;
-        keepalive 100;
-    }
-
+    # Web Service 1
     server {
         listen       80;
-        server_name  localhost;
+        server_name  vm1.local.com;
 
         client_max_body_size 2048M;
 
         location / {
-            proxy_pass        http://api-service;
-            proxy_redirect    off;
-            proxy_set_header  Host $host;
-            proxy_set_header  X-Real-IP $remote_addr;
-            proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+            # 서버 상태 설정 on
+            stub_status        on;
+            # proxy pass 설정
+            proxy_pass         http://web-service1:8081;
+            proxy_redirect     off;
+            proxy_http_version 1.1;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   Connection "";
+        }
+    }
+
+    # Web Service 2 : Load Balancing 
+    upstream upstream-vm2 {
+        least_conn;
+
+        server web-service2-1:8082 max_fails=3 fail_timeout=3s;
+        server web-service2-2:8083 max_fails=3 fail_timeout=3s;
+        server web-service2-bk:8084 backup max_fails=3 fail_timeout=3s;
+
+        keepalive 100;
+        keepalive_requests 1024;
+        keepalive_timeout 12;
+    }
+
+    server {
+        listen       80;
+        server_name  vm2.local.com;
+
+        client_max_body_size 2048M;
+
+        location / {
+            # 서버 상태 설정 on
+            stub_status        on;
+            # proxy pass 설정
+            proxy_pass         http://upstream-vm2;
+            proxy_redirect     off;
+            proxy_http_version 1.1;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   Connection "";
         }
     }
 
