--- a/nginx/api-service1.conf
+++ b/nginx/api-service1.conf
@@ -21,15 +21,9 @@ http {
 
     autoindex off;
 
-    # upstream set
-    upstream upstream-php-fpm {
-        server php7-fpm:9000;
-        keepalive 100;
-    }
-
     server {
         listen       8181;
-        server_name  api1;
+        server_name  api.local.com;
 
         root /source;
 
@@ -53,7 +47,7 @@ http {
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass upstream-php-fpm;
+            fastcgi_pass api-service1-php7-fpm:9000;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
