--- a/nginx/web-proxy-server.conf
+++ b/nginx/web-proxy-server.conf
@@ -61,12 +61,13 @@ http {
     }
 
     server {
-        listen       80;
+        listen       80 ipv6only=off;
         server_name  vm2.local.com;
 
         client_max_body_size 2048M;
 
         location / {
+            # resolver 8.8.8.8 ipv6=off;
             # 서버 상태 설정 on
             stub_status        on;
             # proxy pass 설정
