--- a/nginx/api-service2.conf
+++ b/nginx/api-service2.conf
@@ -22,8 +22,8 @@ http {
     autoindex off;
 
     server {
-        listen       8181;
-        server_name  localhost_api;
+        listen       8182;
+        server_name  api.local.com;
 
         root /source;
 
@@ -47,7 +47,7 @@ http {
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass api-php-fpm:9000;
+            fastcgi_pass api-service2-php7-fpm:9000;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
