--- a/nginx/web-proxy-server.conf
+++ b/nginx/web-proxy-server.conf
@@ -26,6 +26,38 @@ http {
 
     autoindex off;
 
+    # Admin Service : Load Balancing 
+    upstream upstream-admin {
+        least_conn;
+
+        server admin-service1:8091 max_fails=3 fail_timeout=3s;
+
+        keepalive 100;
+        keepalive_requests 1024;
+        keepalive_timeout 12;
+    }
+
+    # Admin Service 1
+    server {
+        listen       80;
+        server_name  admin.local.com;
+
+        client_max_body_size 2048M;
+
+        location / {
+            # 서버 상태 설정 on
+            stub_status        on;
+            # proxy pass 설정
+            proxy_pass         http://upstream-admin;
+            proxy_redirect     off;
+            proxy_http_version 1.1;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   Connection "";
+        }
+    }
+
     # Web Service 1
     server {
         listen       80;
