--- a/nginx/web-proxy-server.conf
+++ b/nginx/web-proxy-server.conf
@@ -77,6 +77,19 @@ http {
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   Connection "";
         }
+
+        location /web3 {
+            # 서버 상태 설정 on
+            stub_status        on;
+            # proxy pass 설정
+            proxy_pass         http://web-service3:8083;
+            proxy_redirect     off;
+            proxy_http_version 1.1;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   Connection "";
+        }
     }
 
     # Web Service 2 : Load Balancing 
