--- a/nginx/admin-service1.conf
+++ b/nginx/admin-service1.conf
@@ -41,17 +41,17 @@ http {
 
         location / {
             index index.html index.htm;
-            # try_files $uri $uri/ /index.php?/$request_uri;
+            try_files $uri $uri/ /index.php?/$request_uri;
         }
 
-        # location ~ \.php$ {
-        #     try_files $uri =404;
-        #     fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        #     fastcgi_pass api-php-fpm:9000;
-        #     fastcgi_index index.php;
-        #     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        #     include fastcgi_params;
-        # }
+        location ~ \.php$ {
+            try_files $uri =404;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass admin-service1-php7-fpm:9000;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            include fastcgi_params;
+        }
 
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
